--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "framer-motion": "^12.23.24",
     "fs": "^0.0.1-security",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
