--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-tailwindcss": "^3.15.1",
@@ -39,6 +40,7 @@
     "node-appwrite": "^12.0.1",
     "prettier": "^3.2.5",
     "react": "^18",
+    "react-big-calendar": "^1.19.4",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
