--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 # testing
 /coverage
 
+
+
 # next.js
 /.next/
 /out/
@@ -37,3 +39,6 @@ next-env.d.ts
 
 # Sentry Config File
 .env.sentry-build-plugin
+
+# Documentation
+/setup-documents
