--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "node-appwrite": "^12.0.1",
+    "nodemailer": "^7.0.12",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-big-calendar": "^1.19.4",
